# LowPolyEngine

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  LowPolyEngine.Test.vcxproj  LowPolyEngine.Test.vcxproj.filters  LowPolyEngine.sln  LowPolyEngine.vcxproj  LowPolyEngine.vcxproj.filters  LowPolyEngineExample_Basics.cpp.vcxproj.filters  ReSharper.DotSettings  Readme.md  build.sh  manual_install.md  somethoughts.md
LowPolyEngine/: Application.h  Base.cpp  Base.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Commands.cpp  Commands.h  Device.cpp  Device.h  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  LowPolyEngine.vcxproj  LowPolyEngine.vcxproj.filters  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  ModelsRenderer.cpp  ModelsRenderer.h  Pipeline.cpp  Pipeline.h  QueueFamilyIndices.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferObject.h  VDeleter.h  Vertex.h  VulkanDevice.cpp  VulkanDevice.h  (+6 more)
LowPolyEngine.Test/: LowPolyEngine.Test.vcxproj  LowPolyEngine.Test.vcxproj.filters  Main.cpp  compile-shaders.bat
LowPolyEngine.Test/models/: cube.ply  tree.ply
LowPolyEngine.Test/shaders/: base.frag  base.frag.spv  base.vert  base.vert.spv
LowPolyEngine/shaders/: triangle.vert
assets/models/: cube.ply
examples/: Basics.cpp  MersenneTwister.cpp  Renderer.cpp  Resource.cpp  ServiceLocator.cpp  Uuid.cpp
examples/MersenneTwister/: MersenneTwister.cpp
examples/Renderer/: Renderer.cpp
include/: Buffer.h  BufferMemory.h  Camera.h  Commands.h  Device.h  Event.h  ImGUI.h  ImageView.h  Model.h  ModelsRenderer.h  Pipeline.h  QueueFamilyIndices.h  RenderObject.h  RenderPass.h  Renderer.h  SwapChain.h  SwapChainSupportDetails.h  UniformBuffer.h  Vertex.h  Window.h  lpe.h  stdafx.h
include/lpe/: lpe.h  lpe.hpp
models/: tree.ply
shaders/: base.frag.spv  base.vert  base.vert.spv
src/: Buffer.cpp  BufferMemory.cpp  Camera.cpp  Command.cpp  Command.h  Commands.cpp  Device.cpp  Device.h  DeviceLevelObject.cpp  DeviceLevelObject.h  Event.h  ImGUI.cpp  ImageView.cpp  Instance.cpp  Instance.h  LogManager.cpp  LogManager.h  MersenneTwister.h  MersenneTwister.inl  Model.cpp  ModelsRenderer.cpp  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  RenderManager.cpp  RenderManager.h  RenderObject.cpp  RenderObject.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ServiceBase.h  ServiceLocator.cpp  ServiceLocator.h  ServiceLocator.inl  SwapChain.cpp  (+24 more)
src/vulkan/: MemoryManagement.cpp  MemoryManagement.hpp  VulkanBase.cpp  VulkanBase.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanManager.cpp  VulkanManager.hpp
test/: Main.cpp
test/models/: monkey.ply
tests/: basic.cpp
